<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PAAS Portal</string>
    <string name="title_section1">概览</string>
    <string name="title_section2">集群管理</string>
    <string name="title_section3">数据库管理</string>
    <string name="title_section4">报警管理</string>
    <string name="title_section5">监控管理</string>
    <string name="title_section19">设置</string>
    <string name="title_section20">登录</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">设置</string>
    <string name="action_update">检查更新</string>
    <string name="msg_construction">该模块暂未实现...</string>
    <string name="server_host">http://rds2.et.letv.com</string>
    <string name="oauth_host">https://oauth.lecloud.com</string>

    <string name="login_label_username">帐号:</string>
    <string name="login_label_password">密码:</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">努力登录中...</string>
    <string name="login_username_hint">请输入您的账号名</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_register_link">没有帐号？ <a href="#" mce_href="#">注册</a></string>
    <string name="login_success">登录成功！</string>
    <string name="login_failure">登录失败！</string>


</resources>
