<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical" >

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <TextView
                    android:id="@+id/tv_zh"
                    android:layout_width="wrap_content"
                    android:layout_height="35dip"
                    android:layout_marginLeft="12dip"
                    android:layout_marginTop="10dip"
                    android:gravity="bottom"
                    android:text="@string/login_label_username"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/et_username"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_below="@id/tv_zh"
                    android:hint="@string/login_username_hint"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="10dip" />

            <TextView
                    android:id="@+id/tv_mima"
                    android:layout_width="wrap_content"
                    android:layout_height="35dip"
                    android:layout_below="@id/et_username"
                    android:layout_marginLeft="12dip"
                    android:layout_marginTop="10dip"
                    android:gravity="bottom"
                    android:text="@string/login_label_password"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/et_passwd"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_below="@id/tv_mima"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="10dip"
                    android:maxLines="200"
                    android:password="true"
                    android:hint="@string/login_password_hint"
                    android:scrollHorizontally="true" />

            <CheckBox
                    android:id="@+id/cb_ldap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_passwd"
                    android:layout_marginLeft="12dip"
                    android:text="内网用户"
                    android:textColor="#000000" />
            <CheckBox
                    android:id="@+id/cb_Remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_ldap"
                    android:layout_marginLeft="12dip"
                    android:text="记住密码"
                    android:textColor="#000000" />

            <CheckBox
                    android:id="@+id/cb_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_Remember_me"
                    android:layout_marginLeft="12dip"
                    android:text="自动登录"
                    android:textColor="#000000" />
            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="80dip"
                    android:layout_height="40dip"
                    android:layout_below="@id/cb_auto"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/cb_auto"
                    android:layout_marginRight="10dip"
                    android:gravity="center"
                    android:text="登录"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    />


        </RelativeLayout>

        <TextView  android:id="@+id/register_link"
                   android:text="@string/login_register_link"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="15dp"
                   android:textColor="#888"
                   android:textColorLink="#FF0066CC"
                   android:linksClickable="true"
                />

</LinearLayout>